[package]
name = "ssh-parser"
version = "0.3.0"
authors = ["Nicolas Vivet <nicolas@nzx.io>", "Pierre Chifflier <chifflier@wzdftpd.net>"]
description = "Parser for the SSH protocol"
license = "LGPL-2.1+"
homepage = "https://github.com/rusticata/ssh-parser"
repository = "https://github.com/rusticata/ssh-parser"
documentation = "https://docs.rs/ssh-parser"

[features]
integers = ["num-bigint", "num-traits"]
serialize = ["cookie-factory"]

[dependencies]
nom = "5.0"
rusticata-macros = "2.0"

cookie-factory = { version = "0.2", optional = true }
num-bigint = { version = "0.2", optional = true }
num-traits = { version = "0.2", optional = true }
