[package]
name = "ssh-parser"
version = "0.6.0"
authors = ["Nicolas Vivet <nicolas@nzx.io>", "Pierre Chifflier <chifflier@wzdftpd.net>"]
description = "Parser for the SSH protocol"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rusticata/ssh-parser"
repository = "https://github.com/rusticata/ssh-parser"
documentation = "https://docs.rs/ssh-parser"
edition = "2018"
rust-version = "1.63"

[features]
integers = ["num-bigint", "num-traits"]
serialize = ["cookie-factory"]

[dependencies]
nom = "7.0"
rusticata-macros = "5.0"

cookie-factory = { version = "0.3", optional = true }
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "nom",
    "nom::*",
]
